<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_smoke"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        tools:context="com.watheq.watheq.authentication.CompleteProfileActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/complt_prof_scrn_welcome"
            android:textColor="@color/united_blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/complt_prof_scrn_msg"
            android:textColor="@color/manatee"
            android:textSize="14sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/acp_profile_image"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_avatar"
            android:transitionName="simple_activity_transition"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp" />


        <EditText
            android:id="@+id/acp_username_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/complt_prof_scrn_username_hint"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/united_blue" />

        <EditText
            android:id="@+id/acp_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/complt_prof_scrn_email_hint"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/united_blue" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/acp_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/rounded_corner_blue"
            android:gravity="center"
            android:text="@string/complt_prof_scrn_confirm"
            android:textColor="@android:color/white"
            app:spinning_bar_color="@android:color/white"
            app:initialCornerAngle="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/complt_prof_scrn_privcy_policy"
            android:textColor="@color/taupe_gray"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>