<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/white_smoke"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/logn_scrn_lable"
            android:textColor="@color/united_blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/logn_scrn_msg"
            android:textColor="@color/manatee"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp">

            <EditText
                android:id="@+id/aAuth_phone_num_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:background="@drawable/rounded_corner"
                android:hint="05058858888xx"
                android:inputType="phone"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingLeft="@dimen/_35sdp"
                android:paddingTop="@dimen/_15sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/_35sdp"
                android:src="@drawable/ic_saudi_arabia" />
        </FrameLayout>

        <TextView
            android:id="@+id/aAuth_validate_phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="10sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/aAuth_verific_code_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:inputType="number"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/united_blue"
            android:maxLength="6"
            android:visibility="gone" />

        <TextView
            android:id="@+id/aAuth_validate_veref_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="10sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/aAuth_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/united_blue"
            android:visibility="gone" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/aAuth_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/rounded_corner_blue"
            android:gravity="center"
            android:text="@string/logn_scrn_confirm_num"
            android:textColor="@android:color/white"
            android:transitionName="simple_activity_transition"
            app:initialCornerAngle="@dimen/_10sdp"
            app:spinning_bar_color="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/logn_scrn_are_u_lawyer"
            android:textColor="@color/manatee"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/logn_scrn_download_app"
            android:textColor="@color/united_blue"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>