<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@android:color/white">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="60dp"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fmc_profile_image"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_avatar"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white_smoke" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_10sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="23"
                        android:textColor="@color/rose_madder"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="43"
                        android:textColor="@color/rose_madder"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_10sdp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/consalt"
                        android:textColor="@color/pastel_blue" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/service"
                        android:textColor="@color/pastel_blue" />
                </LinearLayout>
            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/ic_avatar" />
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>